--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <nav>
             <ul class='nav-bar'>
                 <li class='logo'><a href='#'><img src='assets/headset-icon.png'/></a><p>Web.<span>TASKER</span></p></li>
+                <span class="media-icon">
+                    <img src="assets/fb-icon.png" alt="fb-icon">
+                    <img src="assets/linkedin-icon.png" alt="linkedin-icon">
+                    <img src="assets/github-icon.png" alt="github-icon">
+                </span>
                 <input type='checkbox' id='check' />
                 <span class="menu">
                     <li><a href="">Home</a></li>
