--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <div class="profile-photo">
+            <img src="assets/profile-photo.png" alt="profile-photo">
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
